--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,9 +3,7 @@
         "codespaces": {
             "repositories": {
                 "BlueCannonBall/surge": {
-                    "permissions": {
-                        "issues": "write"
-                    }
+                    "permissions": "write-all"
                 }
             }
         }
